overflow-x fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   height: 100vh;
   width: 100%;
+  overflow-x: hidden;
   background-color: #282c34;
 }
 
